[package]
name = "turbulence"
version = "0.3.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "Tools to provide serialization, multiplexing, optional reliability, and optional compression to a game's networking."
readme = "README.md"
repository = "https://github.com/kyren/turbulence"
documentation = "https://docs.rs/turbulence"
keywords = ["gamedev", "networking"]
license = "MIT OR Apache-2.0"

[badges]
circle-ci = { repository = "kyren/turbulence", branch = "master" }

[dependencies]
bincode = "1"
byteorder = "1"
futures = "0.3"
serde = "1"
snap = "1"
thiserror = "1"

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
